--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "cross-fetch": "^3.1.4",
     "font-awesome": "4.7.0",
     "react": "^17.0.2",
+    "react-animation-component": "^0.2.3",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^17.0.2",
     "react-popper": "0.9.2",
     "react-redux": "^7.2.4",
     "react-redux-form": "^1.16.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.1",
     "reactstrap": "5.0.0",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
